@@ -4,7 +4,6 @@ import com.flz.model.Employee;
 import com.flz.model.entity.EmployeeEntity;
 import com.flz.model.mapper.EmployeeEntityToDomainMapper;
 import com.flz.model.mapper.EmployeeToEntityMapper;
-import com.flz.model.response.EmployeeSummaryResponse;
 import com.flz.port.EmployeeDeletePort;
 import com.flz.port.EmployeeReadPort;
 import com.flz.port.EmployeeSavePort;
@@ -16,7 +15,6 @@ import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Optional;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
@@ -24,8 +22,8 @@ public class EmployeeAdapter implements EmployeeReadPort, EmployeeSavePort, Empl
 
     private final EmployeeRepository employeeRepository;
 
-    private final EmployeeEntityToDomainMapper employeeEntityToDomainMapper = EmployeeEntityToDomainMapper.INSTANCE;
-    private final EmployeeToEntityMapper employeeToEntityMapper = EmployeeToEntityMapper.INSTANCE;
+    private final EmployeeEntityToDomainMapper employeeEntityToDomainMapper;
+    private final EmployeeToEntityMapper employeeToEntityMapper;
 
 
     @Override
@@ -37,28 +35,42 @@ public class EmployeeAdapter implements EmployeeReadPort, EmployeeSavePort, Empl
     @Override
     public List<Employee> findAll(Integer page, Integer pageSize) {
         Pageable pageable = PageRequest.of(page - 1, pageSize);
-        List<EmployeeEntity> employeeEntities = employeeRepository.findAll(pageable).getContent();
-        return employeeEntities.stream().map(employeeEntityToDomainMapper::map).collect(Collectors.toList());
+        List<EmployeeEntity> employeeEntities = employeeRepository
+                .findAll(pageable)
+                .getContent();
+        return employeeEntities.stream()
+                .map(employeeEntityToDomainMapper::map)
+                .toList();
     }
 
     @Override
-    public List<EmployeeSummaryResponse> findSummaryAll() {
+    public List<Employee> findSummaryAll() {
+
         return employeeRepository.findEmployeeSummaries();
     }
 
     @Override
     public boolean existsByIdentity(String identity) {
+
         return employeeRepository.existsByIdentityNumber(identity);
     }
 
     @Override
-    public void save(final Employee employee) {
+    public boolean existsByPhoneNumber(String phoneNumber) {
+
+        return employeeRepository.existsByPhoneNumber(phoneNumber);
+    }
+
+    @Override
+    public Optional<Employee> save(final Employee employee) {
         final EmployeeEntity employeeEntity = employeeToEntityMapper.map(employee);
-        employeeRepository.save(employeeEntity);
+        return Optional.ofNullable(employeeEntityToDomainMapper
+                .map(employeeRepository.save(employeeEntity)));
     }
 
     @Override
     public void delete(Long id) {
+
         employeeRepository.deleteById(id);
     }
 }
